Fix css collapse of account balance in IE

--- a/app/assets/stylesheets/header.css.scss
+++ b/app/assets/stylesheets/header.css.scss
@@ -35,7 +35,10 @@ header {
         .row {
           height: 30px;
           line-height: 30px;
-          label { margin-bottom: 0; }
+          label {
+            display: inline;
+            margin-bottom: 0;
+          }
         }
       }
     }
